// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutForm should match snapshot on big Screen 1`] = `
<DocumentFragment>
  <a
    class="sc-kDThTU sc-crHlIS gYdPEL kBmJFu"
    href="/"
  >
    Shw
  </a>
  <div
    class="sc-egiSv faAILF"
  >
    <form
      class="sc-bqiQRQ izgzrb"
    >
      <h2
        class="sc-ksdxAp gywWkS"
      >
        Contact information
      </h2>
      <p
        class="sc-hBURRC"
      >
        Already have an account?
        <a
          class="sc-fotPbf cxPRWM"
          href=""
        >
           Log in
        </a>
      </p>
      <input
        autocapitalize="off"
        autocomplete="email"
        class="sc-iCfLBT hxyzyO"
        name="email"
        placeholder="Email"
        spellcheck="false"
        type="email"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <div
        class="sc-eCImvq"
      >
        <input
          class="sc-jRQAMF itDDRz"
          id="buyer-accept-marketing"
          name="buyerAcceptMarketing"
          type="checkbox"
        />
        <label
          class="sc-gKckTs"
          for="buyer-accept-marketing"
        >
          Keep me up to date on news and exclusive offers.
        </label>
      </div>
      <h2
        class="sc-pVTma hJjYdI"
      >
        Shipping address
      </h2>
      <input
        autocapitalize="off"
        autocomplete="given-name"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="FirstName"
        placeholder="First name"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="family-name"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="LastName"
        placeholder="Last name"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="address-line1"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="Address"
        placeholder="Address"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="address-line2"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="Address2"
        placeholder="Apartment, suite, etc. (optional)"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocomplete="address-level2"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="City"
        placeholder="City"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <select
        autocomplete="address-level2"
        class="sc-bdvvaa dWKnug"
        id="country"
        name="Country"
        placeholder="Counrty/Region"
      >
        <option
          class="sc-gsDJrp"
          disabled=""
          label="Select a country ... "
          selected=""
          value=""
        >
          Select a country ...
        </option>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Africa"
          label="Africa"
        >
          <option
            class="sc-gsDJrp"
            label="Algeria"
            value="DZ"
          >
            Algeria
          </option>
          <option
            class="sc-gsDJrp"
            label="Angola"
            value="AO"
          >
            Angola
          </option>
          <option
            class="sc-gsDJrp"
            label="Benin"
            value="BJ"
          >
            Benin
          </option>
          <option
            class="sc-gsDJrp"
            label="Botswana"
            value="BW"
          >
            Botswana
          </option>
          <option
            class="sc-gsDJrp"
            label="Burkina Faso"
            value="BF"
          >
            Burkina Faso
          </option>
          <option
            class="sc-gsDJrp"
            label="Burundi"
            value="BI"
          >
            Burundi
          </option>
          <option
            class="sc-gsDJrp"
            label="Cameroon"
            value="CM"
          >
            Cameroon
          </option>
          <option
            class="sc-gsDJrp"
            label="Cape Verde"
            value="CV"
          >
            Cape Verde
          </option>
          <option
            class="sc-gsDJrp"
            label="Central African Republic"
            value="CF"
          >
            Central African Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Chad"
            value="TD"
          >
            Chad
          </option>
          <option
            class="sc-gsDJrp"
            label="Comoros"
            value="KM"
          >
            Comoros
          </option>
          <option
            class="sc-gsDJrp"
            label="Congo - Brazzaville"
            value="CG"
          >
            Congo - Brazzaville
          </option>
          <option
            class="sc-gsDJrp"
            label="Congo - Kinshasa"
            value="CD"
          >
            Congo - Kinshasa
          </option>
          <option
            class="sc-gsDJrp"
            label="Côte d’Ivoire"
            value="CI"
          >
            Côte d’Ivoire
          </option>
          <option
            class="sc-gsDJrp"
            label="Djibouti"
            value="DJ"
          >
            Djibouti
          </option>
          <option
            class="sc-gsDJrp"
            label="Egypt"
            value="EG"
          >
            Egypt
          </option>
          <option
            class="sc-gsDJrp"
            label="Equatorial Guinea"
            value="GQ"
          >
            Equatorial Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Eritrea"
            value="ER"
          >
            Eritrea
          </option>
          <option
            class="sc-gsDJrp"
            label="Ethiopia"
            value="ET"
          >
            Ethiopia
          </option>
          <option
            class="sc-gsDJrp"
            label="Gabon"
            value="GA"
          >
            Gabon
          </option>
          <option
            class="sc-gsDJrp"
            label="Gambia"
            value="GM"
          >
            Gambia
          </option>
          <option
            class="sc-gsDJrp"
            label="Ghana"
            value="GH"
          >
            Ghana
          </option>
          <option
            class="sc-gsDJrp"
            label="Guinea"
            value="GN"
          >
            Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Guinea-Bissau"
            value="GW"
          >
            Guinea-Bissau
          </option>
          <option
            class="sc-gsDJrp"
            label="Kenya"
            value="KE"
          >
            Kenya
          </option>
          <option
            class="sc-gsDJrp"
            label="Lesotho"
            value="LS"
          >
            Lesotho
          </option>
          <option
            class="sc-gsDJrp"
            label="Liberia"
            value="LR"
          >
            Liberia
          </option>
          <option
            class="sc-gsDJrp"
            label="Libya"
            value="LY"
          >
            Libya
          </option>
          <option
            class="sc-gsDJrp"
            label="Madagascar"
            value="MG"
          >
            Madagascar
          </option>
          <option
            class="sc-gsDJrp"
            label="Malawi"
            value="MW"
          >
            Malawi
          </option>
          <option
            class="sc-gsDJrp"
            label="Mali"
            value="ML"
          >
            Mali
          </option>
          <option
            class="sc-gsDJrp"
            label="Mauritania"
            value="MR"
          >
            Mauritania
          </option>
          <option
            class="sc-gsDJrp"
            label="Mauritius"
            value="MU"
          >
            Mauritius
          </option>
          <option
            class="sc-gsDJrp"
            label="Mayotte"
            value="YT"
          >
            Mayotte
          </option>
          <option
            class="sc-gsDJrp"
            label="Morocco"
            value="MA"
          >
            Morocco
          </option>
          <option
            class="sc-gsDJrp"
            label="Mozambique"
            value="MZ"
          >
            Mozambique
          </option>
          <option
            class="sc-gsDJrp"
            label="Namibia"
            value="NA"
          >
            Namibia
          </option>
          <option
            class="sc-gsDJrp"
            label="Niger"
            value="NE"
          >
            Niger
          </option>
          <option
            class="sc-gsDJrp"
            label="Nigeria"
            value="NG"
          >
            Nigeria
          </option>
          <option
            class="sc-gsDJrp"
            label="Rwanda"
            value="RW"
          >
            Rwanda
          </option>
          <option
            class="sc-gsDJrp"
            label="Réunion"
            value="RE"
          >
            Réunion
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Helena"
            value="SH"
          >
            Saint Helena
          </option>
          <option
            class="sc-gsDJrp"
            label="Senegal"
            value="SN"
          >
            Senegal
          </option>
          <option
            class="sc-gsDJrp"
            label="Seychelles"
            value="SC"
          >
            Seychelles
          </option>
          <option
            class="sc-gsDJrp"
            label="Sierra Leone"
            value="SL"
          >
            Sierra Leone
          </option>
          <option
            class="sc-gsDJrp"
            label="Somalia"
            value="SO"
          >
            Somalia
          </option>
          <option
            class="sc-gsDJrp"
            label="South Africa"
            value="ZA"
          >
            South Africa
          </option>
          <option
            class="sc-gsDJrp"
            label="Sudan"
            value="SD"
          >
            Sudan
          </option>
          <option
            class="sc-gsDJrp"
            label="Swaziland"
            value="SZ"
          >
            Swaziland
          </option>
          <option
            class="sc-gsDJrp"
            label="São Tomé and Príncipe"
            value="ST"
          >
            São Tomé and Príncipe
          </option>
          <option
            class="sc-gsDJrp"
            label="Tanzania"
            value="TZ"
          >
            Tanzania
          </option>
          <option
            class="sc-gsDJrp"
            label="Togo"
            value="TG"
          >
            Togo
          </option>
          <option
            class="sc-gsDJrp"
            label="Tunisia"
            value="TN"
          >
            Tunisia
          </option>
          <option
            class="sc-gsDJrp"
            label="Uganda"
            value="UG"
          >
            Uganda
          </option>
          <option
            class="sc-gsDJrp"
            label="Western Sahara"
            value="EH"
          >
            Western Sahara
          </option>
          <option
            class="sc-gsDJrp"
            label="Zambia"
            value="ZM"
          >
            Zambia
          </option>
          <option
            class="sc-gsDJrp"
            label="Zimbabwe"
            value="ZW"
          >
            Zimbabwe
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Americas"
          label="Americas"
        >
          <option
            class="sc-gsDJrp"
            label="Anguilla"
            value="AI"
          >
            Anguilla
          </option>
          <option
            class="sc-gsDJrp"
            label="Antigua and Barbuda"
            value="AG"
          >
            Antigua and Barbuda
          </option>
          <option
            class="sc-gsDJrp"
            label="Argentina"
            value="AR"
          >
            Argentina
          </option>
          <option
            class="sc-gsDJrp"
            label="Aruba"
            value="AW"
          >
            Aruba
          </option>
          <option
            class="sc-gsDJrp"
            label="Bahamas"
            value="BS"
          >
            Bahamas
          </option>
          <option
            class="sc-gsDJrp"
            label="Barbados"
            value="BB"
          >
            Barbados
          </option>
          <option
            class="sc-gsDJrp"
            label="Belize"
            value="BZ"
          >
            Belize
          </option>
          <option
            class="sc-gsDJrp"
            label="Bermuda"
            value="BM"
          >
            Bermuda
          </option>
          <option
            class="sc-gsDJrp"
            label="Bolivia"
            value="BO"
          >
            Bolivia
          </option>
          <option
            class="sc-gsDJrp"
            label="Brazil"
            value="BR"
          >
            Brazil
          </option>
          <option
            class="sc-gsDJrp"
            label="British Virgin Islands"
            value="VG"
          >
            British Virgin Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Canada"
            value="CA"
          >
            Canada
          </option>
          <option
            class="sc-gsDJrp"
            label="Cayman Islands"
            value="KY"
          >
            Cayman Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Chile"
            value="CL"
          >
            Chile
          </option>
          <option
            class="sc-gsDJrp"
            label="Colombia"
            value="CO"
          >
            Colombia
          </option>
          <option
            class="sc-gsDJrp"
            label="Costa Rica"
            value="CR"
          >
            Costa Rica
          </option>
          <option
            class="sc-gsDJrp"
            label="Cuba"
            value="CU"
          >
            Cuba
          </option>
          <option
            class="sc-gsDJrp"
            label="Dominica"
            value="DM"
          >
            Dominica
          </option>
          <option
            class="sc-gsDJrp"
            label="Dominican Republic"
            value="DO"
          >
            Dominican Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Ecuador"
            value="EC"
          >
            Ecuador
          </option>
          <option
            class="sc-gsDJrp"
            label="El Salvador"
            value="SV"
          >
            El Salvador
          </option>
          <option
            class="sc-gsDJrp"
            label="Falkland Islands"
            value="FK"
          >
            Falkland Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="French Guiana"
            value="GF"
          >
            French Guiana
          </option>
          <option
            class="sc-gsDJrp"
            label="Greenland"
            value="GL"
          >
            Greenland
          </option>
          <option
            class="sc-gsDJrp"
            label="Grenada"
            value="GD"
          >
            Grenada
          </option>
          <option
            class="sc-gsDJrp"
            label="Guadeloupe"
            value="GP"
          >
            Guadeloupe
          </option>
          <option
            class="sc-gsDJrp"
            label="Guatemala"
            value="GT"
          >
            Guatemala
          </option>
          <option
            class="sc-gsDJrp"
            label="Guyana"
            value="GY"
          >
            Guyana
          </option>
          <option
            class="sc-gsDJrp"
            label="Haiti"
            value="HT"
          >
            Haiti
          </option>
          <option
            class="sc-gsDJrp"
            label="Honduras"
            value="HN"
          >
            Honduras
          </option>
          <option
            class="sc-gsDJrp"
            label="Jamaica"
            value="JM"
          >
            Jamaica
          </option>
          <option
            class="sc-gsDJrp"
            label="Martinique"
            value="MQ"
          >
            Martinique
          </option>
          <option
            class="sc-gsDJrp"
            label="Mexico"
            value="MX"
          >
            Mexico
          </option>
          <option
            class="sc-gsDJrp"
            label="Montserrat"
            value="MS"
          >
            Montserrat
          </option>
          <option
            class="sc-gsDJrp"
            label="Netherlands Antilles"
            value="AN"
          >
            Netherlands Antilles
          </option>
          <option
            class="sc-gsDJrp"
            label="Nicaragua"
            value="NI"
          >
            Nicaragua
          </option>
          <option
            class="sc-gsDJrp"
            label="Panama"
            value="PA"
          >
            Panama
          </option>
          <option
            class="sc-gsDJrp"
            label="Paraguay"
            value="PY"
          >
            Paraguay
          </option>
          <option
            class="sc-gsDJrp"
            label="Peru"
            value="PE"
          >
            Peru
          </option>
          <option
            class="sc-gsDJrp"
            label="Puerto Rico"
            value="PR"
          >
            Puerto Rico
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Barthélemy"
            value="BL"
          >
            Saint Barthélemy
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Kitts and Nevis"
            value="KN"
          >
            Saint Kitts and Nevis
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Lucia"
            value="LC"
          >
            Saint Lucia
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Martin"
            value="MF"
          >
            Saint Martin
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Pierre and Miquelon"
            value="PM"
          >
            Saint Pierre and Miquelon
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Vincent and the Grenadines"
            value="VC"
          >
            Saint Vincent and the Grenadines
          </option>
          <option
            class="sc-gsDJrp"
            label="Suriname"
            value="SR"
          >
            Suriname
          </option>
          <option
            class="sc-gsDJrp"
            label="Trinidad and Tobago"
            value="TT"
          >
            Trinidad and Tobago
          </option>
          <option
            class="sc-gsDJrp"
            label="Turks and Caicos Islands"
            value="TC"
          >
            Turks and Caicos Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="U.S. Virgin Islands"
            value="VI"
          >
            U.S. Virgin Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="United States"
            value="US"
          >
            United States
          </option>
          <option
            class="sc-gsDJrp"
            label="Uruguay"
            value="UY"
          >
            Uruguay
          </option>
          <option
            class="sc-gsDJrp"
            label="Venezuela"
            value="VE"
          >
            Venezuela
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Asia"
          label="Asia"
        >
          <option
            class="sc-gsDJrp"
            label="Afghanistan"
            value="AF"
          >
            Afghanistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Armenia"
            value="AM"
          >
            Armenia
          </option>
          <option
            class="sc-gsDJrp"
            label="Azerbaijan"
            value="AZ"
          >
            Azerbaijan
          </option>
          <option
            class="sc-gsDJrp"
            label="Bahrain"
            value="BH"
          >
            Bahrain
          </option>
          <option
            class="sc-gsDJrp"
            label="Bangladesh"
            value="BD"
          >
            Bangladesh
          </option>
          <option
            class="sc-gsDJrp"
            label="Bhutan"
            value="BT"
          >
            Bhutan
          </option>
          <option
            class="sc-gsDJrp"
            label="Brunei"
            value="BN"
          >
            Brunei
          </option>
          <option
            class="sc-gsDJrp"
            label="Cambodia"
            value="KH"
          >
            Cambodia
          </option>
          <option
            class="sc-gsDJrp"
            label="China"
            value="CN"
          >
            China
          </option>
          <option
            class="sc-gsDJrp"
            label="Georgia"
            value="GE"
          >
            Georgia
          </option>
          <option
            class="sc-gsDJrp"
            label="Hong Kong SAR China"
            value="HK"
          >
            Hong Kong SAR China
          </option>
          <option
            class="sc-gsDJrp"
            label="India"
            value="IN"
          >
            India
          </option>
          <option
            class="sc-gsDJrp"
            label="Indonesia"
            value="ID"
          >
            Indonesia
          </option>
          <option
            class="sc-gsDJrp"
            label="Iran"
            value="IR"
          >
            Iran
          </option>
          <option
            class="sc-gsDJrp"
            label="Iraq"
            value="IQ"
          >
            Iraq
          </option>
          <option
            class="sc-gsDJrp"
            label="Israel"
            value="IL"
          >
            Israel
          </option>
          <option
            class="sc-gsDJrp"
            label="Japan"
            value="JP"
          >
            Japan
          </option>
          <option
            class="sc-gsDJrp"
            label="Jordan"
            value="JO"
          >
            Jordan
          </option>
          <option
            class="sc-gsDJrp"
            label="Kazakhstan"
            value="KZ"
          >
            Kazakhstan
          </option>
          <option
            class="sc-gsDJrp"
            label="Kuwait"
            value="KW"
          >
            Kuwait
          </option>
          <option
            class="sc-gsDJrp"
            label="Kyrgyzstan"
            value="KG"
          >
            Kyrgyzstan
          </option>
          <option
            class="sc-gsDJrp"
            label="Laos"
            value="LA"
          >
            Laos
          </option>
          <option
            class="sc-gsDJrp"
            label="Lebanon"
            value="LB"
          >
            Lebanon
          </option>
          <option
            class="sc-gsDJrp"
            label="Macau SAR China"
            value="MO"
          >
            Macau SAR China
          </option>
          <option
            class="sc-gsDJrp"
            label="Malaysia"
            value="MY"
          >
            Malaysia
          </option>
          <option
            class="sc-gsDJrp"
            label="Maldives"
            value="MV"
          >
            Maldives
          </option>
          <option
            class="sc-gsDJrp"
            label="Mongolia"
            value="MN"
          >
            Mongolia
          </option>
          <option
            class="sc-gsDJrp"
            label="Myanmar [Burma]"
            value="MM"
          >
            Myanmar [Burma]
          </option>
          <option
            class="sc-gsDJrp"
            label="Nepal"
            value="NP"
          >
            Nepal
          </option>
          <option
            class="sc-gsDJrp"
            label="Neutral Zone"
            value="NT"
          >
            Neutral Zone
          </option>
          <option
            class="sc-gsDJrp"
            label="North Korea"
            value="KP"
          >
            North Korea
          </option>
          <option
            class="sc-gsDJrp"
            label="Oman"
            value="OM"
          >
            Oman
          </option>
          <option
            class="sc-gsDJrp"
            label="Pakistan"
            value="PK"
          >
            Pakistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Palestinian Territories"
            value="PS"
          >
            Palestinian Territories
          </option>
          <option
            class="sc-gsDJrp"
            label="People's Democratic Republic of Yemen"
            value="YD"
          >
            People's Democratic Republic of Yemen
          </option>
          <option
            class="sc-gsDJrp"
            label="Philippines"
            value="PH"
          >
            Philippines
          </option>
          <option
            class="sc-gsDJrp"
            label="Qatar"
            value="QA"
          >
            Qatar
          </option>
          <option
            class="sc-gsDJrp"
            label="Saudi Arabia"
            value="SA"
          >
            Saudi Arabia
          </option>
          <option
            class="sc-gsDJrp"
            label="Singapore"
            value="SG"
          >
            Singapore
          </option>
          <option
            class="sc-gsDJrp"
            label="South Korea"
            value="KR"
          >
            South Korea
          </option>
          <option
            class="sc-gsDJrp"
            label="Sri Lanka"
            value="LK"
          >
            Sri Lanka
          </option>
          <option
            class="sc-gsDJrp"
            label="Syria"
            value="SY"
          >
            Syria
          </option>
          <option
            class="sc-gsDJrp"
            label="Taiwan"
            value="TW"
          >
            Taiwan
          </option>
          <option
            class="sc-gsDJrp"
            label="Tajikistan"
            value="TJ"
          >
            Tajikistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Thailand"
            value="TH"
          >
            Thailand
          </option>
          <option
            class="sc-gsDJrp"
            label="Timor-Leste"
            value="TL"
          >
            Timor-Leste
          </option>
          <option
            class="sc-gsDJrp"
            label="Turkey"
            value="TR"
          >
            Turkey
          </option>
          <option
            class="sc-gsDJrp"
            label="Turkmenistan"
            value="TM"
          >
            Turkmenistan
          </option>
          <option
            class="sc-gsDJrp"
            label="United Arab Emirates"
            value="AE"
          >
            United Arab Emirates
          </option>
          <option
            class="sc-gsDJrp"
            label="Uzbekistan"
            value="UZ"
          >
            Uzbekistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Vietnam"
            value="VN"
          >
            Vietnam
          </option>
          <option
            class="sc-gsDJrp"
            label="Yemen"
            value="YE"
          >
            Yemen
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Europe"
          label="Europe"
        >
          <option
            class="sc-gsDJrp"
            label="Albania"
            value="AL"
          >
            Albania
          </option>
          <option
            class="sc-gsDJrp"
            label="Andorra"
            value="AD"
          >
            Andorra
          </option>
          <option
            class="sc-gsDJrp"
            label="Austria"
            value="AT"
          >
            Austria
          </option>
          <option
            class="sc-gsDJrp"
            label="Belarus"
            value="BY"
          >
            Belarus
          </option>
          <option
            class="sc-gsDJrp"
            label="Belgium"
            value="BE"
          >
            Belgium
          </option>
          <option
            class="sc-gsDJrp"
            label="Bosnia and Herzegovina"
            value="BA"
          >
            Bosnia and Herzegovina
          </option>
          <option
            class="sc-gsDJrp"
            label="Bulgaria"
            value="BG"
          >
            Bulgaria
          </option>
          <option
            class="sc-gsDJrp"
            label="Croatia"
            value="HR"
          >
            Croatia
          </option>
          <option
            class="sc-gsDJrp"
            label="Cyprus"
            value="CY"
          >
            Cyprus
          </option>
          <option
            class="sc-gsDJrp"
            label="Czech Republic"
            value="CZ"
          >
            Czech Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Denmark"
            value="DK"
          >
            Denmark
          </option>
          <option
            class="sc-gsDJrp"
            label="East Germany"
            value="DD"
          >
            East Germany
          </option>
          <option
            class="sc-gsDJrp"
            label="Estonia"
            value="EE"
          >
            Estonia
          </option>
          <option
            class="sc-gsDJrp"
            label="Faroe Islands"
            value="FO"
          >
            Faroe Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Finland"
            value="FI"
          >
            Finland
          </option>
          <option
            class="sc-gsDJrp"
            label="France"
            value="FR"
          >
            France
          </option>
          <option
            class="sc-gsDJrp"
            label="Germany"
            value="DE"
          >
            Germany
          </option>
          <option
            class="sc-gsDJrp"
            label="Gibraltar"
            value="GI"
          >
            Gibraltar
          </option>
          <option
            class="sc-gsDJrp"
            label="Greece"
            value="GR"
          >
            Greece
          </option>
          <option
            class="sc-gsDJrp"
            label="Guernsey"
            value="GG"
          >
            Guernsey
          </option>
          <option
            class="sc-gsDJrp"
            label="Hungary"
            value="HU"
          >
            Hungary
          </option>
          <option
            class="sc-gsDJrp"
            label="Iceland"
            value="IS"
          >
            Iceland
          </option>
          <option
            class="sc-gsDJrp"
            label="Ireland"
            value="IE"
          >
            Ireland
          </option>
          <option
            class="sc-gsDJrp"
            label="Isle of Man"
            value="IM"
          >
            Isle of Man
          </option>
          <option
            class="sc-gsDJrp"
            label="Italy"
            value="IT"
          >
            Italy
          </option>
          <option
            class="sc-gsDJrp"
            label="Jersey"
            value="JE"
          >
            Jersey
          </option>
          <option
            class="sc-gsDJrp"
            label="Latvia"
            value="LV"
          >
            Latvia
          </option>
          <option
            class="sc-gsDJrp"
            label="Liechtenstein"
            value="LI"
          >
            Liechtenstein
          </option>
          <option
            class="sc-gsDJrp"
            label="Lithuania"
            value="LT"
          >
            Lithuania
          </option>
          <option
            class="sc-gsDJrp"
            label="Luxembourg"
            value="LU"
          >
            Luxembourg
          </option>
          <option
            class="sc-gsDJrp"
            label="Macedonia"
            value="MK"
          >
            Macedonia
          </option>
          <option
            class="sc-gsDJrp"
            label="Malta"
            value="MT"
          >
            Malta
          </option>
          <option
            class="sc-gsDJrp"
            label="Metropolitan France"
            value="FX"
          >
            Metropolitan France
          </option>
          <option
            class="sc-gsDJrp"
            label="Moldova"
            value="MD"
          >
            Moldova
          </option>
          <option
            class="sc-gsDJrp"
            label="Monaco"
            value="MC"
          >
            Monaco
          </option>
          <option
            class="sc-gsDJrp"
            label="Montenegro"
            value="ME"
          >
            Montenegro
          </option>
          <option
            class="sc-gsDJrp"
            label="Netherlands"
            value="NL"
          >
            Netherlands
          </option>
          <option
            class="sc-gsDJrp"
            label="Norway"
            value="NO"
          >
            Norway
          </option>
          <option
            class="sc-gsDJrp"
            label="Poland"
            value="PL"
          >
            Poland
          </option>
          <option
            class="sc-gsDJrp"
            label="Portugal"
            value="PT"
          >
            Portugal
          </option>
          <option
            class="sc-gsDJrp"
            label="Romania"
            value="RO"
          >
            Romania
          </option>
          <option
            class="sc-gsDJrp"
            label="Russia"
            value="RU"
          >
            Russia
          </option>
          <option
            class="sc-gsDJrp"
            label="San Marino"
            value="SM"
          >
            San Marino
          </option>
          <option
            class="sc-gsDJrp"
            label="Serbia"
            value="RS"
          >
            Serbia
          </option>
          <option
            class="sc-gsDJrp"
            label="Serbia and Montenegro"
            value="CS"
          >
            Serbia and Montenegro
          </option>
          <option
            class="sc-gsDJrp"
            label="Slovakia"
            value="SK"
          >
            Slovakia
          </option>
          <option
            class="sc-gsDJrp"
            label="Slovenia"
            value="SI"
          >
            Slovenia
          </option>
          <option
            class="sc-gsDJrp"
            label="Spain"
            value="ES"
          >
            Spain
          </option>
          <option
            class="sc-gsDJrp"
            label="Svalbard and Jan Mayen"
            value="SJ"
          >
            Svalbard and Jan Mayen
          </option>
          <option
            class="sc-gsDJrp"
            label="Sweden"
            value="SE"
          >
            Sweden
          </option>
          <option
            class="sc-gsDJrp"
            label="Switzerland"
            value="CH"
          >
            Switzerland
          </option>
          <option
            class="sc-gsDJrp"
            label="Ukraine"
            value="UA"
          >
            Ukraine
          </option>
          <option
            class="sc-gsDJrp"
            label="Union of Soviet Socialist Republics"
            value="SU"
          >
            Union of Soviet Socialist Republics
          </option>
          <option
            class="sc-gsDJrp"
            label="United Kingdom"
            value="GB"
          >
            United Kingdom
          </option>
          <option
            class="sc-gsDJrp"
            label="Vatican City"
            value="VA"
          >
            Vatican City
          </option>
          <option
            class="sc-gsDJrp"
            label="Åland Islands"
            value="AX"
          >
            Åland Islands
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Oceania"
          label="Oceania"
        >
          <option
            class="sc-gsDJrp"
            label="American Samoa"
            value="AS"
          >
            American Samoa
          </option>
          <option
            class="sc-gsDJrp"
            label="Antarctica"
            value="AQ"
          >
            Antarctica
          </option>
          <option
            class="sc-gsDJrp"
            label="Australia"
            value="AU"
          >
            Australia
          </option>
          <option
            class="sc-gsDJrp"
            label="Bouvet Island"
            value="BV"
          >
            Bouvet Island
          </option>
          <option
            class="sc-gsDJrp"
            label="British Indian Ocean Territory"
            value="IO"
          >
            British Indian Ocean Territory
          </option>
          <option
            class="sc-gsDJrp"
            label="Christmas Island"
            value="CX"
          >
            Christmas Island
          </option>
          <option
            class="sc-gsDJrp"
            label="Cocos [Keeling] Islands"
            value="CC"
          >
            Cocos [Keeling] Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Cook Islands"
            value="CK"
          >
            Cook Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Fiji"
            value="FJ"
          >
            Fiji
          </option>
          <option
            class="sc-gsDJrp"
            label="French Polynesia"
            value="PF"
          >
            French Polynesia
          </option>
          <option
            class="sc-gsDJrp"
            label="French Southern Territories"
            value="TF"
          >
            French Southern Territories
          </option>
          <option
            class="sc-gsDJrp"
            label="Guam"
            value="GU"
          >
            Guam
          </option>
          <option
            class="sc-gsDJrp"
            label="Heard Island and McDonald Islands"
            value="HM"
          >
            Heard Island and McDonald Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Kiribati"
            value="KI"
          >
            Kiribati
          </option>
          <option
            class="sc-gsDJrp"
            label="Marshall Islands"
            value="MH"
          >
            Marshall Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Micronesia"
            value="FM"
          >
            Micronesia
          </option>
          <option
            class="sc-gsDJrp"
            label="Nauru"
            value="NR"
          >
            Nauru
          </option>
          <option
            class="sc-gsDJrp"
            label="New Caledonia"
            value="NC"
          >
            New Caledonia
          </option>
          <option
            class="sc-gsDJrp"
            label="New Zealand"
            value="NZ"
          >
            New Zealand
          </option>
          <option
            class="sc-gsDJrp"
            label="Niue"
            value="NU"
          >
            Niue
          </option>
          <option
            class="sc-gsDJrp"
            label="Norfolk Island"
            value="NF"
          >
            Norfolk Island
          </option>
          <option
            class="sc-gsDJrp"
            label="Northern Mariana Islands"
            value="MP"
          >
            Northern Mariana Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Palau"
            value="PW"
          >
            Palau
          </option>
          <option
            class="sc-gsDJrp"
            label="Papua New Guinea"
            value="PG"
          >
            Papua New Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Pitcairn Islands"
            value="PN"
          >
            Pitcairn Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Samoa"
            value="WS"
          >
            Samoa
          </option>
          <option
            class="sc-gsDJrp"
            label="Solomon Islands"
            value="SB"
          >
            Solomon Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="South Georgia and the South Sandwich Islands"
            value="GS"
          >
            South Georgia and the South Sandwich Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Tokelau"
            value="TK"
          >
            Tokelau
          </option>
          <option
            class="sc-gsDJrp"
            label="Tonga"
            value="TO"
          >
            Tonga
          </option>
          <option
            class="sc-gsDJrp"
            label="Tuvalu"
            value="TV"
          >
            Tuvalu
          </option>
          <option
            class="sc-gsDJrp"
            label="U.S. Minor Outlying Islands"
            value="UM"
          >
            U.S. Minor Outlying Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Vanuatu"
            value="VU"
          >
            Vanuatu
          </option>
          <option
            class="sc-gsDJrp"
            label="Wallis and Futuna"
            value="WF"
          >
            Wallis and Futuna
          </option>
        </optgroup>
      </select>
      <p
        class="sc-hKwCoD kZRgqn"
      />
      <input
        autocomplete="tel"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="PhoneNumber"
        placeholder="Phone"
        type="tel"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <button
        class="sc-iqsfdx sc-fFehDp kyzsRZ HlkUL"
        type="submit"
      >
        Continue to shipping
      </button>
      <a
        class="sc-kDThTU sc-bkkfTU gYdPEL iXgQya"
        href="/"
      >
        Return to cart
      </a>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CheckoutForm should match snapshot on small Screen 1`] = `
<DocumentFragment>
  <div
    class="sc-egiSv faAILF"
  >
    <form
      class="sc-bqiQRQ izgzrb"
    >
      <h2
        class="sc-ksdxAp gywWkS"
      >
        Contact information
      </h2>
      <p
        class="sc-hBURRC"
      >
        Already have an account?
        <a
          class="sc-fotPbf cxPRWM"
          href=""
        >
           Log in
        </a>
      </p>
      <input
        autocapitalize="off"
        autocomplete="email"
        class="sc-iCfLBT hxyzyO"
        name="email"
        placeholder="Email"
        spellcheck="false"
        type="email"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <div
        class="sc-eCImvq"
      >
        <input
          class="sc-jRQAMF itDDRz"
          id="buyer-accept-marketing"
          name="buyerAcceptMarketing"
          type="checkbox"
        />
        <label
          class="sc-gKckTs"
          for="buyer-accept-marketing"
        >
          Keep me up to date on news and exclusive offers.
        </label>
      </div>
      <h2
        class="sc-pVTma hJjYdI"
      >
        Shipping address
      </h2>
      <input
        autocapitalize="off"
        autocomplete="given-name"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="FirstName"
        placeholder="First name"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="family-name"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="LastName"
        placeholder="Last name"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="address-line1"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="Address"
        placeholder="Address"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocapitalize="off"
        autocomplete="address-line2"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="Address2"
        placeholder="Apartment, suite, etc. (optional)"
        spellcheck="false"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <input
        autocomplete="address-level2"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="City"
        placeholder="City"
        type="text"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <select
        autocomplete="address-level2"
        class="sc-bdvvaa dWKnug"
        id="country"
        name="Country"
        placeholder="Counrty/Region"
      >
        <option
          class="sc-gsDJrp"
          disabled=""
          label="Select a country ... "
          selected=""
          value=""
        >
          Select a country ...
        </option>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Africa"
          label="Africa"
        >
          <option
            class="sc-gsDJrp"
            label="Algeria"
            value="DZ"
          >
            Algeria
          </option>
          <option
            class="sc-gsDJrp"
            label="Angola"
            value="AO"
          >
            Angola
          </option>
          <option
            class="sc-gsDJrp"
            label="Benin"
            value="BJ"
          >
            Benin
          </option>
          <option
            class="sc-gsDJrp"
            label="Botswana"
            value="BW"
          >
            Botswana
          </option>
          <option
            class="sc-gsDJrp"
            label="Burkina Faso"
            value="BF"
          >
            Burkina Faso
          </option>
          <option
            class="sc-gsDJrp"
            label="Burundi"
            value="BI"
          >
            Burundi
          </option>
          <option
            class="sc-gsDJrp"
            label="Cameroon"
            value="CM"
          >
            Cameroon
          </option>
          <option
            class="sc-gsDJrp"
            label="Cape Verde"
            value="CV"
          >
            Cape Verde
          </option>
          <option
            class="sc-gsDJrp"
            label="Central African Republic"
            value="CF"
          >
            Central African Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Chad"
            value="TD"
          >
            Chad
          </option>
          <option
            class="sc-gsDJrp"
            label="Comoros"
            value="KM"
          >
            Comoros
          </option>
          <option
            class="sc-gsDJrp"
            label="Congo - Brazzaville"
            value="CG"
          >
            Congo - Brazzaville
          </option>
          <option
            class="sc-gsDJrp"
            label="Congo - Kinshasa"
            value="CD"
          >
            Congo - Kinshasa
          </option>
          <option
            class="sc-gsDJrp"
            label="Côte d’Ivoire"
            value="CI"
          >
            Côte d’Ivoire
          </option>
          <option
            class="sc-gsDJrp"
            label="Djibouti"
            value="DJ"
          >
            Djibouti
          </option>
          <option
            class="sc-gsDJrp"
            label="Egypt"
            value="EG"
          >
            Egypt
          </option>
          <option
            class="sc-gsDJrp"
            label="Equatorial Guinea"
            value="GQ"
          >
            Equatorial Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Eritrea"
            value="ER"
          >
            Eritrea
          </option>
          <option
            class="sc-gsDJrp"
            label="Ethiopia"
            value="ET"
          >
            Ethiopia
          </option>
          <option
            class="sc-gsDJrp"
            label="Gabon"
            value="GA"
          >
            Gabon
          </option>
          <option
            class="sc-gsDJrp"
            label="Gambia"
            value="GM"
          >
            Gambia
          </option>
          <option
            class="sc-gsDJrp"
            label="Ghana"
            value="GH"
          >
            Ghana
          </option>
          <option
            class="sc-gsDJrp"
            label="Guinea"
            value="GN"
          >
            Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Guinea-Bissau"
            value="GW"
          >
            Guinea-Bissau
          </option>
          <option
            class="sc-gsDJrp"
            label="Kenya"
            value="KE"
          >
            Kenya
          </option>
          <option
            class="sc-gsDJrp"
            label="Lesotho"
            value="LS"
          >
            Lesotho
          </option>
          <option
            class="sc-gsDJrp"
            label="Liberia"
            value="LR"
          >
            Liberia
          </option>
          <option
            class="sc-gsDJrp"
            label="Libya"
            value="LY"
          >
            Libya
          </option>
          <option
            class="sc-gsDJrp"
            label="Madagascar"
            value="MG"
          >
            Madagascar
          </option>
          <option
            class="sc-gsDJrp"
            label="Malawi"
            value="MW"
          >
            Malawi
          </option>
          <option
            class="sc-gsDJrp"
            label="Mali"
            value="ML"
          >
            Mali
          </option>
          <option
            class="sc-gsDJrp"
            label="Mauritania"
            value="MR"
          >
            Mauritania
          </option>
          <option
            class="sc-gsDJrp"
            label="Mauritius"
            value="MU"
          >
            Mauritius
          </option>
          <option
            class="sc-gsDJrp"
            label="Mayotte"
            value="YT"
          >
            Mayotte
          </option>
          <option
            class="sc-gsDJrp"
            label="Morocco"
            value="MA"
          >
            Morocco
          </option>
          <option
            class="sc-gsDJrp"
            label="Mozambique"
            value="MZ"
          >
            Mozambique
          </option>
          <option
            class="sc-gsDJrp"
            label="Namibia"
            value="NA"
          >
            Namibia
          </option>
          <option
            class="sc-gsDJrp"
            label="Niger"
            value="NE"
          >
            Niger
          </option>
          <option
            class="sc-gsDJrp"
            label="Nigeria"
            value="NG"
          >
            Nigeria
          </option>
          <option
            class="sc-gsDJrp"
            label="Rwanda"
            value="RW"
          >
            Rwanda
          </option>
          <option
            class="sc-gsDJrp"
            label="Réunion"
            value="RE"
          >
            Réunion
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Helena"
            value="SH"
          >
            Saint Helena
          </option>
          <option
            class="sc-gsDJrp"
            label="Senegal"
            value="SN"
          >
            Senegal
          </option>
          <option
            class="sc-gsDJrp"
            label="Seychelles"
            value="SC"
          >
            Seychelles
          </option>
          <option
            class="sc-gsDJrp"
            label="Sierra Leone"
            value="SL"
          >
            Sierra Leone
          </option>
          <option
            class="sc-gsDJrp"
            label="Somalia"
            value="SO"
          >
            Somalia
          </option>
          <option
            class="sc-gsDJrp"
            label="South Africa"
            value="ZA"
          >
            South Africa
          </option>
          <option
            class="sc-gsDJrp"
            label="Sudan"
            value="SD"
          >
            Sudan
          </option>
          <option
            class="sc-gsDJrp"
            label="Swaziland"
            value="SZ"
          >
            Swaziland
          </option>
          <option
            class="sc-gsDJrp"
            label="São Tomé and Príncipe"
            value="ST"
          >
            São Tomé and Príncipe
          </option>
          <option
            class="sc-gsDJrp"
            label="Tanzania"
            value="TZ"
          >
            Tanzania
          </option>
          <option
            class="sc-gsDJrp"
            label="Togo"
            value="TG"
          >
            Togo
          </option>
          <option
            class="sc-gsDJrp"
            label="Tunisia"
            value="TN"
          >
            Tunisia
          </option>
          <option
            class="sc-gsDJrp"
            label="Uganda"
            value="UG"
          >
            Uganda
          </option>
          <option
            class="sc-gsDJrp"
            label="Western Sahara"
            value="EH"
          >
            Western Sahara
          </option>
          <option
            class="sc-gsDJrp"
            label="Zambia"
            value="ZM"
          >
            Zambia
          </option>
          <option
            class="sc-gsDJrp"
            label="Zimbabwe"
            value="ZW"
          >
            Zimbabwe
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Americas"
          label="Americas"
        >
          <option
            class="sc-gsDJrp"
            label="Anguilla"
            value="AI"
          >
            Anguilla
          </option>
          <option
            class="sc-gsDJrp"
            label="Antigua and Barbuda"
            value="AG"
          >
            Antigua and Barbuda
          </option>
          <option
            class="sc-gsDJrp"
            label="Argentina"
            value="AR"
          >
            Argentina
          </option>
          <option
            class="sc-gsDJrp"
            label="Aruba"
            value="AW"
          >
            Aruba
          </option>
          <option
            class="sc-gsDJrp"
            label="Bahamas"
            value="BS"
          >
            Bahamas
          </option>
          <option
            class="sc-gsDJrp"
            label="Barbados"
            value="BB"
          >
            Barbados
          </option>
          <option
            class="sc-gsDJrp"
            label="Belize"
            value="BZ"
          >
            Belize
          </option>
          <option
            class="sc-gsDJrp"
            label="Bermuda"
            value="BM"
          >
            Bermuda
          </option>
          <option
            class="sc-gsDJrp"
            label="Bolivia"
            value="BO"
          >
            Bolivia
          </option>
          <option
            class="sc-gsDJrp"
            label="Brazil"
            value="BR"
          >
            Brazil
          </option>
          <option
            class="sc-gsDJrp"
            label="British Virgin Islands"
            value="VG"
          >
            British Virgin Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Canada"
            value="CA"
          >
            Canada
          </option>
          <option
            class="sc-gsDJrp"
            label="Cayman Islands"
            value="KY"
          >
            Cayman Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Chile"
            value="CL"
          >
            Chile
          </option>
          <option
            class="sc-gsDJrp"
            label="Colombia"
            value="CO"
          >
            Colombia
          </option>
          <option
            class="sc-gsDJrp"
            label="Costa Rica"
            value="CR"
          >
            Costa Rica
          </option>
          <option
            class="sc-gsDJrp"
            label="Cuba"
            value="CU"
          >
            Cuba
          </option>
          <option
            class="sc-gsDJrp"
            label="Dominica"
            value="DM"
          >
            Dominica
          </option>
          <option
            class="sc-gsDJrp"
            label="Dominican Republic"
            value="DO"
          >
            Dominican Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Ecuador"
            value="EC"
          >
            Ecuador
          </option>
          <option
            class="sc-gsDJrp"
            label="El Salvador"
            value="SV"
          >
            El Salvador
          </option>
          <option
            class="sc-gsDJrp"
            label="Falkland Islands"
            value="FK"
          >
            Falkland Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="French Guiana"
            value="GF"
          >
            French Guiana
          </option>
          <option
            class="sc-gsDJrp"
            label="Greenland"
            value="GL"
          >
            Greenland
          </option>
          <option
            class="sc-gsDJrp"
            label="Grenada"
            value="GD"
          >
            Grenada
          </option>
          <option
            class="sc-gsDJrp"
            label="Guadeloupe"
            value="GP"
          >
            Guadeloupe
          </option>
          <option
            class="sc-gsDJrp"
            label="Guatemala"
            value="GT"
          >
            Guatemala
          </option>
          <option
            class="sc-gsDJrp"
            label="Guyana"
            value="GY"
          >
            Guyana
          </option>
          <option
            class="sc-gsDJrp"
            label="Haiti"
            value="HT"
          >
            Haiti
          </option>
          <option
            class="sc-gsDJrp"
            label="Honduras"
            value="HN"
          >
            Honduras
          </option>
          <option
            class="sc-gsDJrp"
            label="Jamaica"
            value="JM"
          >
            Jamaica
          </option>
          <option
            class="sc-gsDJrp"
            label="Martinique"
            value="MQ"
          >
            Martinique
          </option>
          <option
            class="sc-gsDJrp"
            label="Mexico"
            value="MX"
          >
            Mexico
          </option>
          <option
            class="sc-gsDJrp"
            label="Montserrat"
            value="MS"
          >
            Montserrat
          </option>
          <option
            class="sc-gsDJrp"
            label="Netherlands Antilles"
            value="AN"
          >
            Netherlands Antilles
          </option>
          <option
            class="sc-gsDJrp"
            label="Nicaragua"
            value="NI"
          >
            Nicaragua
          </option>
          <option
            class="sc-gsDJrp"
            label="Panama"
            value="PA"
          >
            Panama
          </option>
          <option
            class="sc-gsDJrp"
            label="Paraguay"
            value="PY"
          >
            Paraguay
          </option>
          <option
            class="sc-gsDJrp"
            label="Peru"
            value="PE"
          >
            Peru
          </option>
          <option
            class="sc-gsDJrp"
            label="Puerto Rico"
            value="PR"
          >
            Puerto Rico
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Barthélemy"
            value="BL"
          >
            Saint Barthélemy
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Kitts and Nevis"
            value="KN"
          >
            Saint Kitts and Nevis
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Lucia"
            value="LC"
          >
            Saint Lucia
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Martin"
            value="MF"
          >
            Saint Martin
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Pierre and Miquelon"
            value="PM"
          >
            Saint Pierre and Miquelon
          </option>
          <option
            class="sc-gsDJrp"
            label="Saint Vincent and the Grenadines"
            value="VC"
          >
            Saint Vincent and the Grenadines
          </option>
          <option
            class="sc-gsDJrp"
            label="Suriname"
            value="SR"
          >
            Suriname
          </option>
          <option
            class="sc-gsDJrp"
            label="Trinidad and Tobago"
            value="TT"
          >
            Trinidad and Tobago
          </option>
          <option
            class="sc-gsDJrp"
            label="Turks and Caicos Islands"
            value="TC"
          >
            Turks and Caicos Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="U.S. Virgin Islands"
            value="VI"
          >
            U.S. Virgin Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="United States"
            value="US"
          >
            United States
          </option>
          <option
            class="sc-gsDJrp"
            label="Uruguay"
            value="UY"
          >
            Uruguay
          </option>
          <option
            class="sc-gsDJrp"
            label="Venezuela"
            value="VE"
          >
            Venezuela
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Asia"
          label="Asia"
        >
          <option
            class="sc-gsDJrp"
            label="Afghanistan"
            value="AF"
          >
            Afghanistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Armenia"
            value="AM"
          >
            Armenia
          </option>
          <option
            class="sc-gsDJrp"
            label="Azerbaijan"
            value="AZ"
          >
            Azerbaijan
          </option>
          <option
            class="sc-gsDJrp"
            label="Bahrain"
            value="BH"
          >
            Bahrain
          </option>
          <option
            class="sc-gsDJrp"
            label="Bangladesh"
            value="BD"
          >
            Bangladesh
          </option>
          <option
            class="sc-gsDJrp"
            label="Bhutan"
            value="BT"
          >
            Bhutan
          </option>
          <option
            class="sc-gsDJrp"
            label="Brunei"
            value="BN"
          >
            Brunei
          </option>
          <option
            class="sc-gsDJrp"
            label="Cambodia"
            value="KH"
          >
            Cambodia
          </option>
          <option
            class="sc-gsDJrp"
            label="China"
            value="CN"
          >
            China
          </option>
          <option
            class="sc-gsDJrp"
            label="Georgia"
            value="GE"
          >
            Georgia
          </option>
          <option
            class="sc-gsDJrp"
            label="Hong Kong SAR China"
            value="HK"
          >
            Hong Kong SAR China
          </option>
          <option
            class="sc-gsDJrp"
            label="India"
            value="IN"
          >
            India
          </option>
          <option
            class="sc-gsDJrp"
            label="Indonesia"
            value="ID"
          >
            Indonesia
          </option>
          <option
            class="sc-gsDJrp"
            label="Iran"
            value="IR"
          >
            Iran
          </option>
          <option
            class="sc-gsDJrp"
            label="Iraq"
            value="IQ"
          >
            Iraq
          </option>
          <option
            class="sc-gsDJrp"
            label="Israel"
            value="IL"
          >
            Israel
          </option>
          <option
            class="sc-gsDJrp"
            label="Japan"
            value="JP"
          >
            Japan
          </option>
          <option
            class="sc-gsDJrp"
            label="Jordan"
            value="JO"
          >
            Jordan
          </option>
          <option
            class="sc-gsDJrp"
            label="Kazakhstan"
            value="KZ"
          >
            Kazakhstan
          </option>
          <option
            class="sc-gsDJrp"
            label="Kuwait"
            value="KW"
          >
            Kuwait
          </option>
          <option
            class="sc-gsDJrp"
            label="Kyrgyzstan"
            value="KG"
          >
            Kyrgyzstan
          </option>
          <option
            class="sc-gsDJrp"
            label="Laos"
            value="LA"
          >
            Laos
          </option>
          <option
            class="sc-gsDJrp"
            label="Lebanon"
            value="LB"
          >
            Lebanon
          </option>
          <option
            class="sc-gsDJrp"
            label="Macau SAR China"
            value="MO"
          >
            Macau SAR China
          </option>
          <option
            class="sc-gsDJrp"
            label="Malaysia"
            value="MY"
          >
            Malaysia
          </option>
          <option
            class="sc-gsDJrp"
            label="Maldives"
            value="MV"
          >
            Maldives
          </option>
          <option
            class="sc-gsDJrp"
            label="Mongolia"
            value="MN"
          >
            Mongolia
          </option>
          <option
            class="sc-gsDJrp"
            label="Myanmar [Burma]"
            value="MM"
          >
            Myanmar [Burma]
          </option>
          <option
            class="sc-gsDJrp"
            label="Nepal"
            value="NP"
          >
            Nepal
          </option>
          <option
            class="sc-gsDJrp"
            label="Neutral Zone"
            value="NT"
          >
            Neutral Zone
          </option>
          <option
            class="sc-gsDJrp"
            label="North Korea"
            value="KP"
          >
            North Korea
          </option>
          <option
            class="sc-gsDJrp"
            label="Oman"
            value="OM"
          >
            Oman
          </option>
          <option
            class="sc-gsDJrp"
            label="Pakistan"
            value="PK"
          >
            Pakistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Palestinian Territories"
            value="PS"
          >
            Palestinian Territories
          </option>
          <option
            class="sc-gsDJrp"
            label="People's Democratic Republic of Yemen"
            value="YD"
          >
            People's Democratic Republic of Yemen
          </option>
          <option
            class="sc-gsDJrp"
            label="Philippines"
            value="PH"
          >
            Philippines
          </option>
          <option
            class="sc-gsDJrp"
            label="Qatar"
            value="QA"
          >
            Qatar
          </option>
          <option
            class="sc-gsDJrp"
            label="Saudi Arabia"
            value="SA"
          >
            Saudi Arabia
          </option>
          <option
            class="sc-gsDJrp"
            label="Singapore"
            value="SG"
          >
            Singapore
          </option>
          <option
            class="sc-gsDJrp"
            label="South Korea"
            value="KR"
          >
            South Korea
          </option>
          <option
            class="sc-gsDJrp"
            label="Sri Lanka"
            value="LK"
          >
            Sri Lanka
          </option>
          <option
            class="sc-gsDJrp"
            label="Syria"
            value="SY"
          >
            Syria
          </option>
          <option
            class="sc-gsDJrp"
            label="Taiwan"
            value="TW"
          >
            Taiwan
          </option>
          <option
            class="sc-gsDJrp"
            label="Tajikistan"
            value="TJ"
          >
            Tajikistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Thailand"
            value="TH"
          >
            Thailand
          </option>
          <option
            class="sc-gsDJrp"
            label="Timor-Leste"
            value="TL"
          >
            Timor-Leste
          </option>
          <option
            class="sc-gsDJrp"
            label="Turkey"
            value="TR"
          >
            Turkey
          </option>
          <option
            class="sc-gsDJrp"
            label="Turkmenistan"
            value="TM"
          >
            Turkmenistan
          </option>
          <option
            class="sc-gsDJrp"
            label="United Arab Emirates"
            value="AE"
          >
            United Arab Emirates
          </option>
          <option
            class="sc-gsDJrp"
            label="Uzbekistan"
            value="UZ"
          >
            Uzbekistan
          </option>
          <option
            class="sc-gsDJrp"
            label="Vietnam"
            value="VN"
          >
            Vietnam
          </option>
          <option
            class="sc-gsDJrp"
            label="Yemen"
            value="YE"
          >
            Yemen
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Europe"
          label="Europe"
        >
          <option
            class="sc-gsDJrp"
            label="Albania"
            value="AL"
          >
            Albania
          </option>
          <option
            class="sc-gsDJrp"
            label="Andorra"
            value="AD"
          >
            Andorra
          </option>
          <option
            class="sc-gsDJrp"
            label="Austria"
            value="AT"
          >
            Austria
          </option>
          <option
            class="sc-gsDJrp"
            label="Belarus"
            value="BY"
          >
            Belarus
          </option>
          <option
            class="sc-gsDJrp"
            label="Belgium"
            value="BE"
          >
            Belgium
          </option>
          <option
            class="sc-gsDJrp"
            label="Bosnia and Herzegovina"
            value="BA"
          >
            Bosnia and Herzegovina
          </option>
          <option
            class="sc-gsDJrp"
            label="Bulgaria"
            value="BG"
          >
            Bulgaria
          </option>
          <option
            class="sc-gsDJrp"
            label="Croatia"
            value="HR"
          >
            Croatia
          </option>
          <option
            class="sc-gsDJrp"
            label="Cyprus"
            value="CY"
          >
            Cyprus
          </option>
          <option
            class="sc-gsDJrp"
            label="Czech Republic"
            value="CZ"
          >
            Czech Republic
          </option>
          <option
            class="sc-gsDJrp"
            label="Denmark"
            value="DK"
          >
            Denmark
          </option>
          <option
            class="sc-gsDJrp"
            label="East Germany"
            value="DD"
          >
            East Germany
          </option>
          <option
            class="sc-gsDJrp"
            label="Estonia"
            value="EE"
          >
            Estonia
          </option>
          <option
            class="sc-gsDJrp"
            label="Faroe Islands"
            value="FO"
          >
            Faroe Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Finland"
            value="FI"
          >
            Finland
          </option>
          <option
            class="sc-gsDJrp"
            label="France"
            value="FR"
          >
            France
          </option>
          <option
            class="sc-gsDJrp"
            label="Germany"
            value="DE"
          >
            Germany
          </option>
          <option
            class="sc-gsDJrp"
            label="Gibraltar"
            value="GI"
          >
            Gibraltar
          </option>
          <option
            class="sc-gsDJrp"
            label="Greece"
            value="GR"
          >
            Greece
          </option>
          <option
            class="sc-gsDJrp"
            label="Guernsey"
            value="GG"
          >
            Guernsey
          </option>
          <option
            class="sc-gsDJrp"
            label="Hungary"
            value="HU"
          >
            Hungary
          </option>
          <option
            class="sc-gsDJrp"
            label="Iceland"
            value="IS"
          >
            Iceland
          </option>
          <option
            class="sc-gsDJrp"
            label="Ireland"
            value="IE"
          >
            Ireland
          </option>
          <option
            class="sc-gsDJrp"
            label="Isle of Man"
            value="IM"
          >
            Isle of Man
          </option>
          <option
            class="sc-gsDJrp"
            label="Italy"
            value="IT"
          >
            Italy
          </option>
          <option
            class="sc-gsDJrp"
            label="Jersey"
            value="JE"
          >
            Jersey
          </option>
          <option
            class="sc-gsDJrp"
            label="Latvia"
            value="LV"
          >
            Latvia
          </option>
          <option
            class="sc-gsDJrp"
            label="Liechtenstein"
            value="LI"
          >
            Liechtenstein
          </option>
          <option
            class="sc-gsDJrp"
            label="Lithuania"
            value="LT"
          >
            Lithuania
          </option>
          <option
            class="sc-gsDJrp"
            label="Luxembourg"
            value="LU"
          >
            Luxembourg
          </option>
          <option
            class="sc-gsDJrp"
            label="Macedonia"
            value="MK"
          >
            Macedonia
          </option>
          <option
            class="sc-gsDJrp"
            label="Malta"
            value="MT"
          >
            Malta
          </option>
          <option
            class="sc-gsDJrp"
            label="Metropolitan France"
            value="FX"
          >
            Metropolitan France
          </option>
          <option
            class="sc-gsDJrp"
            label="Moldova"
            value="MD"
          >
            Moldova
          </option>
          <option
            class="sc-gsDJrp"
            label="Monaco"
            value="MC"
          >
            Monaco
          </option>
          <option
            class="sc-gsDJrp"
            label="Montenegro"
            value="ME"
          >
            Montenegro
          </option>
          <option
            class="sc-gsDJrp"
            label="Netherlands"
            value="NL"
          >
            Netherlands
          </option>
          <option
            class="sc-gsDJrp"
            label="Norway"
            value="NO"
          >
            Norway
          </option>
          <option
            class="sc-gsDJrp"
            label="Poland"
            value="PL"
          >
            Poland
          </option>
          <option
            class="sc-gsDJrp"
            label="Portugal"
            value="PT"
          >
            Portugal
          </option>
          <option
            class="sc-gsDJrp"
            label="Romania"
            value="RO"
          >
            Romania
          </option>
          <option
            class="sc-gsDJrp"
            label="Russia"
            value="RU"
          >
            Russia
          </option>
          <option
            class="sc-gsDJrp"
            label="San Marino"
            value="SM"
          >
            San Marino
          </option>
          <option
            class="sc-gsDJrp"
            label="Serbia"
            value="RS"
          >
            Serbia
          </option>
          <option
            class="sc-gsDJrp"
            label="Serbia and Montenegro"
            value="CS"
          >
            Serbia and Montenegro
          </option>
          <option
            class="sc-gsDJrp"
            label="Slovakia"
            value="SK"
          >
            Slovakia
          </option>
          <option
            class="sc-gsDJrp"
            label="Slovenia"
            value="SI"
          >
            Slovenia
          </option>
          <option
            class="sc-gsDJrp"
            label="Spain"
            value="ES"
          >
            Spain
          </option>
          <option
            class="sc-gsDJrp"
            label="Svalbard and Jan Mayen"
            value="SJ"
          >
            Svalbard and Jan Mayen
          </option>
          <option
            class="sc-gsDJrp"
            label="Sweden"
            value="SE"
          >
            Sweden
          </option>
          <option
            class="sc-gsDJrp"
            label="Switzerland"
            value="CH"
          >
            Switzerland
          </option>
          <option
            class="sc-gsDJrp"
            label="Ukraine"
            value="UA"
          >
            Ukraine
          </option>
          <option
            class="sc-gsDJrp"
            label="Union of Soviet Socialist Republics"
            value="SU"
          >
            Union of Soviet Socialist Republics
          </option>
          <option
            class="sc-gsDJrp"
            label="United Kingdom"
            value="GB"
          >
            United Kingdom
          </option>
          <option
            class="sc-gsDJrp"
            label="Vatican City"
            value="VA"
          >
            Vatican City
          </option>
          <option
            class="sc-gsDJrp"
            label="Åland Islands"
            value="AX"
          >
            Åland Islands
          </option>
        </optgroup>
        <optgroup
          class="sc-dkPtyc"
          id="country-optgroup-Oceania"
          label="Oceania"
        >
          <option
            class="sc-gsDJrp"
            label="American Samoa"
            value="AS"
          >
            American Samoa
          </option>
          <option
            class="sc-gsDJrp"
            label="Antarctica"
            value="AQ"
          >
            Antarctica
          </option>
          <option
            class="sc-gsDJrp"
            label="Australia"
            value="AU"
          >
            Australia
          </option>
          <option
            class="sc-gsDJrp"
            label="Bouvet Island"
            value="BV"
          >
            Bouvet Island
          </option>
          <option
            class="sc-gsDJrp"
            label="British Indian Ocean Territory"
            value="IO"
          >
            British Indian Ocean Territory
          </option>
          <option
            class="sc-gsDJrp"
            label="Christmas Island"
            value="CX"
          >
            Christmas Island
          </option>
          <option
            class="sc-gsDJrp"
            label="Cocos [Keeling] Islands"
            value="CC"
          >
            Cocos [Keeling] Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Cook Islands"
            value="CK"
          >
            Cook Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Fiji"
            value="FJ"
          >
            Fiji
          </option>
          <option
            class="sc-gsDJrp"
            label="French Polynesia"
            value="PF"
          >
            French Polynesia
          </option>
          <option
            class="sc-gsDJrp"
            label="French Southern Territories"
            value="TF"
          >
            French Southern Territories
          </option>
          <option
            class="sc-gsDJrp"
            label="Guam"
            value="GU"
          >
            Guam
          </option>
          <option
            class="sc-gsDJrp"
            label="Heard Island and McDonald Islands"
            value="HM"
          >
            Heard Island and McDonald Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Kiribati"
            value="KI"
          >
            Kiribati
          </option>
          <option
            class="sc-gsDJrp"
            label="Marshall Islands"
            value="MH"
          >
            Marshall Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Micronesia"
            value="FM"
          >
            Micronesia
          </option>
          <option
            class="sc-gsDJrp"
            label="Nauru"
            value="NR"
          >
            Nauru
          </option>
          <option
            class="sc-gsDJrp"
            label="New Caledonia"
            value="NC"
          >
            New Caledonia
          </option>
          <option
            class="sc-gsDJrp"
            label="New Zealand"
            value="NZ"
          >
            New Zealand
          </option>
          <option
            class="sc-gsDJrp"
            label="Niue"
            value="NU"
          >
            Niue
          </option>
          <option
            class="sc-gsDJrp"
            label="Norfolk Island"
            value="NF"
          >
            Norfolk Island
          </option>
          <option
            class="sc-gsDJrp"
            label="Northern Mariana Islands"
            value="MP"
          >
            Northern Mariana Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Palau"
            value="PW"
          >
            Palau
          </option>
          <option
            class="sc-gsDJrp"
            label="Papua New Guinea"
            value="PG"
          >
            Papua New Guinea
          </option>
          <option
            class="sc-gsDJrp"
            label="Pitcairn Islands"
            value="PN"
          >
            Pitcairn Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Samoa"
            value="WS"
          >
            Samoa
          </option>
          <option
            class="sc-gsDJrp"
            label="Solomon Islands"
            value="SB"
          >
            Solomon Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="South Georgia and the South Sandwich Islands"
            value="GS"
          >
            South Georgia and the South Sandwich Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Tokelau"
            value="TK"
          >
            Tokelau
          </option>
          <option
            class="sc-gsDJrp"
            label="Tonga"
            value="TO"
          >
            Tonga
          </option>
          <option
            class="sc-gsDJrp"
            label="Tuvalu"
            value="TV"
          >
            Tuvalu
          </option>
          <option
            class="sc-gsDJrp"
            label="U.S. Minor Outlying Islands"
            value="UM"
          >
            U.S. Minor Outlying Islands
          </option>
          <option
            class="sc-gsDJrp"
            label="Vanuatu"
            value="VU"
          >
            Vanuatu
          </option>
          <option
            class="sc-gsDJrp"
            label="Wallis and Futuna"
            value="WF"
          >
            Wallis and Futuna
          </option>
        </optgroup>
      </select>
      <p
        class="sc-hKwCoD kZRgqn"
      />
      <input
        autocomplete="tel"
        autocorrect="off"
        class="sc-iCfLBT hxyzyO"
        name="PhoneNumber"
        placeholder="Phone"
        type="tel"
      />
      <p
        class="sc-furvIG gahooq"
      />
      <button
        class="sc-iqsfdx sc-fFehDp kyzsRZ HlkUL"
        type="submit"
      >
        Continue to shipping
      </button>
      <a
        class="sc-kDThTU sc-bkkfTU gYdPEL iXgQya"
        href="/"
      >
        Return to cart
      </a>
    </form>
  </div>
</DocumentFragment>
`;
